--- a/点滴生活/miniprogram/app.json
+++ b/点滴生活/miniprogram/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/keepaccounts/keepaccounts",
     "pages/index/index",
     "pages/userConsole/userConsole",
     "pages/storageConsole/storageConsole",
@@ -18,7 +19,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
+    "navigationBarTitleText": "点滴生活",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
