--- a/点滴生活/project.config.json
+++ b/点滴生活/project.config.json
@@ -40,6 +40,7 @@
   "appid": "wx4b1d1178aa4bc783",
   "projectname": "%E7%82%B9%E6%BB%B4%E7%94%9F%E6%B4%BB",
   "libVersion": "2.14.1",
+  "cloudfunctionTemplateRoot": "cloudfunctionTemplate",
   "condition": {
     "search": {
       "list": []
