--- a/点滴生活/miniprogram/app.json
+++ b/点滴生活/miniprogram/app.json
@@ -3,19 +3,19 @@
     "pages/keepaccounts/keepaccounts",
     "pages/community/community",
     "pages/keepthing/keepthing",
-    "pages/mycenter/mycenter"
+    "pages/mycenter/mycenter",
+    "pages/makeaccount/makeaccount"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
+    "navigationStyle": "custom",
     "navigationBarBackgroundColor": "#F6F6F6",
     "navigationBarTitleText": "点滴生活",
     "navigationBarTextStyle": "black"
   },
- 
   "tabBar": {
-    "color":"#E6E6EA",
-    "selectedColor": "#11cd6e",
+    "color": "#E6E6EA",
     "borderStyle": "white",
     "list": [
       {
