--- a/点滴生活/miniprogram/app.json
+++ b/点滴生活/miniprogram/app.json
@@ -4,7 +4,8 @@
     "pages/community/community",
     "pages/keepthing/keepthing",
     "pages/mycenter/mycenter",
-    "pages/makeaccount/makeaccount"
+    "pages/makeaccount/makeaccount",
+    "pages/testpage/testpage"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
