跳转到空的通知列表
通知列表页面显示未实现

--- a/点滴生活/miniprogram/app.json
+++ b/点滴生活/miniprogram/app.json
@@ -5,7 +5,9 @@
     "pages/keepthing/keepthing",
     "pages/mycenter/mycenter",
     "pages/makeaccount/makeaccount",
+    "pages/mycenter/notificationlist",
     "pages/testpage/testpage"
+
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
