--- a/点滴生活/miniprogram/app.json
+++ b/点滴生活/miniprogram/app.json
@@ -8,7 +8,8 @@
     "pages/mycenter/notificationlist",
     "pages/testpage/testpage",
     "pages/keepthing/notesdetails",
-    "pages/keepthing/noteslist"
+    "pages/keepthing/noteslist",
+    "pages/mycenter/release"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
