个人页面 我的发布前端框架
个人页面 我的发布前端框架

--- a/点滴生活/project.private.config.json
+++ b/点滴生活/project.private.config.json
@@ -45,6 +45,12 @@
         {
           "name": "pages/mycenter/release",
           "pathName": "pages/mycenter/release",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/makeaccount/makeaccount",
+          "pathName": "pages/makeaccount/makeaccount",
           "scene": null
         }
       ]
