我是来逮捕51假期还偷偷加班的人的

--- a/点滴生活/miniprogram/app.json
+++ b/点滴生活/miniprogram/app.json
@@ -44,6 +44,9 @@
         "pagePath": "pages/mycenter/mycenter"
       }
     ]
+  }, 
+  "useExtendedLib": {
+    "weui": true
   },
   "sitemapLocation": "sitemap.json",
   "style": "v2"
