--- a/点滴生活/miniprogram/app.json
+++ b/点滴生活/miniprogram/app.json
@@ -9,7 +9,8 @@
     "pages/testpage/testpage",
     "pages/keepthing/notesdetails",
     "pages/keepthing/noteslist",
-    "pages/mycenter/release"
+    "pages/mycenter/release",
+    "pages/mycenter/norelease"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -44,7 +45,7 @@
         "pagePath": "pages/mycenter/mycenter"
       }
     ]
-  }, 
+  },
   "useExtendedLib": {
     "weui": true
   },
