--- a/点滴生活/project.private.config.json
+++ b/点滴生活/project.private.config.json
@@ -57,6 +57,12 @@
         {
           "name": "pages/mycenter/release",
           "pathName": "pages/mycenter/release",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/mycenter/norelease",
+          "pathName": "pages/mycenter/norelease",
           "scene": null
         }
       ]
