--- a/点滴生活/miniprogram/app.json
+++ b/点滴生活/miniprogram/app.json
@@ -9,8 +9,7 @@
     "pages/testpage/testpage",
     "pages/keepthing/notesdetails",
     "pages/keepthing/noteslist",
-    "pages/mycenter/release",
-    "pages/mycenter/norelease"
+    "pages/mycenter/release"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
