--- a/点滴生活/miniprogram/app.json
+++ b/点滴生活/miniprogram/app.json
@@ -10,7 +10,7 @@
     "pages/keepthing/notesdetails",
     "pages/keepthing/noteslist",
     "pages/mycenter/release",
-    "pages/tippage"
+    "pages/tippage/tippage"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
